erDiagram
	direction TB
	classDef usuarios fill:#E8F5E9,stroke:#2E7D32,color:#1B1B1B
	classDef ubicaciones fill:#E3F2FD,stroke:#1565C0,color:#1B1B1B
	classDef prestadores fill:#E0F2F1,stroke:#00897B,color:#1B1B1B
	classDef servicios fill:#EDE7F6,stroke:#5E35B1,color:#1B1B1B
	classDef contratacion fill:#FFF3E0,stroke:#EF6C00,color:#1B1B1B
	classDef confianza fill:#FFEBEE,stroke:#C62828,color:#1B1B1B

	Usuario {

	}

	Administrador {

	}

	SegundoFactorUsuario {

	}

	Sesion {

	}

	PerfilPrestador {

	}

	Departamento {

	}

	Municipio {

	}

	SolicitudServicio {

	}

	MedioContactoPrestador {

	}

	TrabajoPortafolio {

	}

	ImagenTrabajoPortafolio {

	}

	SolicitudVerificacionPrestador {

	}

	DocumentoVerificacionPrestador {

	}

	CategoriaServicio {

	}

	SubcategoriaServicio {

	}

	ServicioPublicado {

	}

	ImagenServicioPublicado {

	}

	CambioEstadoSolicitud {

	}

	MensajeSolicitud {

	}

	CalificacionUsuario {

	}

	CasoModeracion {

	}

	MedidaAdministrativa {

	}

	HistorialCaso {

	}

	Usuario||--o|Administrador:"usuarioAdministrador"
	Usuario||--o|SegundoFactorUsuario:"usuarioSegundoFactor"
	Usuario||--o{Sesion:"usuarioSesion"
	Usuario||--o|PerfilPrestador:"usuarioPerfilPrestador"
	Departamento||--o{Municipio:"departamentoMunicipio"
	Municipio||--o{PerfilPrestador:"municipioPerfilPrestador"
	Municipio||--o{SolicitudServicio:"municipioSolicitudServicio"
	PerfilPrestador||--o{MedioContactoPrestador:"perfilMedioContacto"
	PerfilPrestador||--o{TrabajoPortafolio:"perfilTrabajoPortafolio"
	TrabajoPortafolio||--o{ImagenTrabajoPortafolio:"trabajoImagenPortafolio"
	PerfilPrestador||--o{SolicitudVerificacionPrestador:"perfilSolicitudVerificacion"
	Administrador|o--o{SolicitudVerificacionPrestador:"solicitudVerificacionRevisada"
	SolicitudVerificacionPrestador||--o{DocumentoVerificacionPrestador:"solicitudDocumentoVerificacion"
	CategoriaServicio||--o{SubcategoriaServicio:"categoriaSubcategoria"
	SubcategoriaServicio||--o{ServicioPublicado:"subcategoriaServicioPublicado"
	PerfilPrestador||--o{ServicioPublicado:"perfilServicioPublicado"
	ServicioPublicado||--o{ImagenServicioPublicado:"servicioImagenPublicada"
	Usuario||--o{SolicitudServicio:"usuarioSolicitudServicio"
	ServicioPublicado||--o{SolicitudServicio:"servicioSolicitudServicio"
	SolicitudServicio||--|{CambioEstadoSolicitud:"solicitudCambioEstado"
	Usuario||--o{CambioEstadoSolicitud:"usuarioCambioEstado"
	SolicitudServicio||--o{MensajeSolicitud:"solicitudMensaje"
	Usuario||--o{MensajeSolicitud:"usuarioMensaje"
	SolicitudServicio||--o{CalificacionUsuario:"solicitudCalificacion"
	Usuario||--o{CalificacionUsuario:"calificacionEmitida"
	Usuario||--o{CalificacionUsuario:"calificacionRecibida"
	SolicitudServicio||--o{CasoModeracion:"solicitudCasoModeracion"
	Usuario||--o{CasoModeracion:"casoPresentado"
	Usuario||--o{CasoModeracion:"casoRecibido"
	Administrador|o--o{CasoModeracion:"casoAsignado"
	MedidaAdministrativa|o--o{CasoModeracion:"medidaActual"
	CasoModeracion||--|{HistorialCaso:"versionesCaso"
	Usuario||--o{HistorialCaso:"cuentaAfectada"
	Usuario|o--o{HistorialCaso:"actorEvento"
	Administrador|o--o{HistorialCaso:"responsableVersion"
	MedidaAdministrativa|o--o{HistorialCaso:"medidaVersion"

	Usuario:::usuarios
	Administrador:::usuarios
	SegundoFactorUsuario:::usuarios
	Sesion:::usuarios
	PerfilPrestador:::prestadores
	Departamento:::ubicaciones
	Municipio:::ubicaciones
	SolicitudServicio:::contratacion
	MedioContactoPrestador:::prestadores
	TrabajoPortafolio:::prestadores
	ImagenTrabajoPortafolio:::prestadores
	SolicitudVerificacionPrestador:::prestadores
	DocumentoVerificacionPrestador:::prestadores
	CategoriaServicio:::servicios
	SubcategoriaServicio:::servicios
	ServicioPublicado:::servicios
	ImagenServicioPublicado:::servicios
	CambioEstadoSolicitud:::contratacion
	MensajeSolicitud:::contratacion
	CalificacionUsuario:::confianza
	CasoModeracion:::confianza
	MedidaAdministrativa:::confianza
	HistorialCaso:::confianza
